# myAssistant

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  SETUP.md  env.example  index.html  pyproject.toml  railway.json  render.yaml  requirements.txt  start.py  test_local_ai.py  test_smart_ai.py
myassistant/: ai_response.py  api.py  chatgpt_ai.py  cli.py  config.py  gui.py  local_ai.py  memory_store.py  minimal_gui.py  smart_ai.py  web_gui.py
