[project]
name = "myassistant"
version = "0.1.0"
description = "Personal multilingual memory assistant"
authors = [{ name = "Little Sheep" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "langid>=1.1.6",
  "sqlite-utils>=3.36",
  "jinja2>=3.1.4",
  "speechrecognition>=3.10.0",
  "pyttsx3>=2.90",
  "pyaudio>=0.2.11"
]

[project.scripts]
assistant = "myassistant.cli:main"
assistant-gui = "myassistant.gui:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

